Better mobile spacing, button consistency, fix for marketing nav

--- a/scss/_inspiration.scss
+++ b/scss/_inspiration.scss
@@ -1,8 +1,3 @@
-
-
-
-
-
 .section-inspiration {
   margin-bottom: 20px;
 
@@ -13,7 +8,9 @@
   p {
     max-height: 150px;
     overflow: hidden;
+    text-overflow: ellipsis;
     margin-bottom: rem-calc(15px);
+    color: $dark-gray;
   }
 
 }
